feat: Implement ticket retrieval use cases and add optimistic locking to tickets.